SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -std=c++17")
INCLUDE_DIRECTORIES(. ${EasyLua_SOURCE_DIR}/easylua ${EasyLua_SOURCE_DIR}/liblua53)
LINK_DIRECTORIES(${EasyLua_BINARY_DIR}/lib)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(Test ${DIR_SRCS})
TARGET_LINK_LIBRARIES(Test libeasylua liblua53)